--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "i18next": "^22.0.6"
+    "i18next": "^22.0.6",
+    "swiper": "^8.4.5"
   }
 }
